2009-04-16  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Changed launcher to UI specs.
	Fixes: NB#109134, 111112

	* src/launcher/hd-launcher-tile.c: Use SmallSystemFont.
	* src/launcher/hd-launcher.c: Don't display title and icon for subpages.

2009-04-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-theme.c (construct_buttons): In case decor is not yet
	created (d == NULL), allow close button for non-stackables and
	secondaries acting as the stack leader.

2009-04-16  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#108826 during drag and drop or panning , device is getting black
	          screen , reboot is required to use any application
	NB#109753 Tap and hold on any link received in mail - blanks ui
	completely

	* src/home/hd-render-manager.c:
	  hd_render_manager_append_geo_cb():
	    Don't allow blocker rectangles with negative position.
	  hd_render_manager_is_visible():
	    Fix integer propagation mistakes which caused some if()s to fail,
	    thus some clients to block others which it shouldn't thus hiding
	    the application actor behind the 1x1 window thus scaring the hell
	    out of testers.

2009-04-16  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Handle (= don't crash) clients without STACKING_LAYER properly.

	* src/mb/hd-comp-mgr.c:
	  hd_comp_mgr_handle_stackable(): error handling improvement
	  hd_comp_mgr_map_notify(): do not give up map_notify(),
	    because then we'd crash in the switcher when the client
	    is gone and Kimmo would be fast to find me.

2009-04-15  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Centralized showing the loading screen only as a response to the
	HdAppMgr signal.
	Fixes: NB#108072

	* src/home/hd-switcher.c: Added handler for application-launched signal.
	* src/launcher/hd-app-mgr.c: Removed directly showing the loading
	screen when launching from dbus call.
	* src/launcher/hd-launcher.c: Separated launching an app from showing
	the loading screen.