@@ -148,6 +148,8 @@ on_popup_timeline_new_frame(ClutterTimeline *timeline,
 
   pop_top = data->geo.y==0;
   pop_bottom = data->geo.y+data->geo.height==HD_COMP_MGR_SCREEN_HEIGHT;
+  if (pop_top && pop_bottom)
+    pop_top = 0;
   amt =  (float)clutter_timeline_get_progress(timeline);
   /* reverse if we're removing this */
   if (data->event == MBWMCompMgrClientEventUnmap)
